[tool.poetry]
name = "pyduko"
version = "0.1.0"
description = ""
authors = ["Gilad Kutiel <gilad.kutiel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
rope = "^1.0.0"
autopep8 = "^1.6.0"
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
